--- a/Employee_CSV_Migrator/pom.xml
+++ b/Employee_CSV_Migrator/pom.xml
@@ -24,6 +24,11 @@
       <artifactId>junit-jupiter</artifactId>
       <version>5.9.0</version>
     </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.30</version>
+    </dependency>
   </dependencies>
 
   <build>
