--- a/Employee_CSV_Migrator/pom.xml
+++ b/Employee_CSV_Migrator/pom.xml
@@ -29,6 +29,12 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.30</version>
     </dependency>
+      <dependency>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-shade-plugin</artifactId>
+          <version>3.3.0</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
   <build>
@@ -55,6 +61,14 @@
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
           <version>3.0.2</version>
+          <configuration>
+              <archive>
+                  <manifest>
+                      <addClasspath>true</addClasspath>
+                      <mainClass>org.sparta.sonic.App</mainClass>
+                  </manifest>
+              </archive>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-install-plugin</artifactId>
@@ -75,5 +89,28 @@
         </plugin>
       </plugins>
     </pluginManagement>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-shade-plugin</artifactId>
+            <version>3.3.0</version>
+            <executions>
+                <execution>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>shade</goal>
+                    </goals>
+                </execution>
+            </executions>
+            <configuration>
+                <artifactSet>
+                    <excludes>
+                        <exclude>junit:junit</exclude>
+                        <exclude>org.apache.maven:lib:tests</exclude>
+                    </excludes>
+                </artifactSet>
+            </configuration>
+        </plugin>
+    </plugins>
   </build>
 </project>
